# check-host

./: dockerfile  main.py  pyproject.toml  readme.md
.github/workflows/: docker-publish.yml
static/: script.js  style.css
templates/: index.html
