[project]
name = "check-host"
version = "0.1.0"
description = "the project provides backend and frontend for checking ip address and port"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
